# OpenCV

./: .gitignore  CMakeLists.txt
data/: Flip_roi_inverse.avi  mydata.xml  mydata.yml
part1/: 01_HelloWorld  01_HelloWorld.cpp  02_basicOp.cpp  03_matOp.cpp  04_inputArray.cpp  05_matOp2.cpp  06_video.cpp
part2/: 09_videosave.cpp  10_drawing.cpp  13_font.cpp  14_freetype.cpp  15_keyboard.cpp  16_tickmeter.cpp  17_mouse.cpp  18_mouse_example.cpp  19_trackbar.cpp  20_filestorage.cpp  20_fps_game.cpp  21_filestorage2.cpp  22_mask.cpp
part3/: 23_brightness.cpp  24_contrast.cpp  26_arithmetic.cpp  27_embossing.cpp  28_blur.cpp  29_sharpening.cpp  30_bilateral.cpp
part4/: 31_affine.cpp  32_perspective.cpp  33_perspective.cpp  35_sobel.cpp  36_canny.cpp  37_houghline.cpp  39_color_spilt.cpp  40_inrange.cpp  41_inrange.cpp  42_threshold.cpp  43_morpholgy.cpp  44_labeling.cpp  45_poligon.cpp  measure_paper_area.cpp
part5/: 47_cascade.cpp  48_cascade_ex.cpp  49_hog.cpp  50_qr.cpp  51_corners.cpp  52_orb.cpp  53_matching.cpp
part6/: 54_knnplane.cpp  55_knndigit.cpp  56_handpose.cpp
